Added PUT and DELETE routes, added more information to the package.json file.
